more and more changes

--- a/src/main/resources/templates/add-video.html
+++ b/src/main/resources/templates/add-video.html
@@ -6,12 +6,9 @@
     <script type="text/javascript" src="js/addVideo.js"></script>
 </head>
 <body>
-<form method="post" th:action="@{/uploadVideo}" enctype="multipart/form-data">
+<form method="post" th:action="@{/add-video}" enctype="multipart/form-data">
     <label for = "videoForUpload">Загрузите видео</label>
-    <input type="file" name = "videoForUpload" id = "videoForUpload" accept=".avi,.mov,.mp4,.mpg"/>
-    <input id="videoSubmit" type="submit"/>
-</form>
-<form method="post" th:action="@{/add-video}">
+    <input type="file" name = "videoForUpload" id = "videoForUpload" accept=".avi,.mov,.mp4,.mpg"/><br>
     <label for="name">Название: </label><input type="text" id="name" name="name"/><br>
     <label for="description">Описание: </label><input type="text" id="description" name="description"/><br>
     <label for="isCommented">Возможность комментирования: </label><input type="checkbox" id="isCommented" name="isCommented"/><br>
