--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <p th:text="${id}"></p>
+    <video controls="controls">
+        <source th:src="${videoSource}">
+        Your browser does not support the video tag.
+    </video>
+    <p th:text="${name}"/>
+    <p th:text="${description}"/>
 </body>
 </html>
