-renamed controllers -added rest controller to streaming video from storage -changed Video entity for working with spring content, removed some fields -added VideoStorage interface for storing videos - removed NameGeneratorService.java - changed templates

--- a/src/main/resources/templates/add-video.html
+++ b/src/main/resources/templates/add-video.html
@@ -6,6 +6,9 @@
     <script type="text/javascript" src="js/addVideo.js"></script>
 </head>
 <body>
+<a href="/">Главная страница</a>
+<a href="/add-video">Добавить видео</a>
+<hr>
 <form method="post" th:action="@{/add-video}" enctype="multipart/form-data">
     <label for = "videoForUpload">Загрузите видео</label>
     <input type="file" name = "videoForUpload" id = "videoForUpload" accept=".avi,.mov,.mp4,.mpg"/><br>
