--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="/">Главная страница</a>
-<a href="/add-video">Добавить видео</a>
+<a href="/video/add-video">Добавить видео</a>
 <hr>
     <video preload="auto" autoplay="autoplay"  width="600" height="400" controls>
         <source th:src="${videoSource}" th:type="${mimeType}">
