--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,6 +10,7 @@
 <hr>
     <table>
         <tr th:each="video: ${videos}">
+            <td><img th:src="@{${postersUrl} + ${video.id}}" width="100" height="100"/></td>
             <td th:text="${video.title}"/>
             <td><a th:href="@{/video/view(id=${video.id})}">ссылка</a></td>
         </tr>
