--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -8,8 +8,8 @@
 <a href="/">Главная страница</a>
 <a href="/video/add-video">Добавить видео</a>
 <hr>
-    <video th:poster="${posterSource}" preload="auto" autoplay="autoplay"  width="600" height="400" controls>
-        <source th:src="${videoSource}" th:type="${videoMimeType}">
+    <video th:poster="${posterSource}" preload="auto" autoplay="autoplay"  width="600" height="400" controls data-setup='{}'>
+        <source th:each="videoSource: ${videoSources}" th:src="${videoSource.value}" th:type="${videoMimeType}" th:label="${videoSource.key}" th:res="${videoSource.key}"  />
         Your browser does not support the video tag.
     </video>
     <p th:text="${title}"/>
